fixed the color

--- a/task1.html
+++ b/task1.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <title>banglore</title>
-<p>presidency university</p>
+<body>
+<h1 style="background-color:yellow">This is first program</h1>
+<p style="background-color:grey">presidency university</p>
+</body>
 </head>
 </html>
